# go-workspace

./: .gitignore  README.md
src/: .air.toml  .dockerignore  .env.example  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  dev.sh  docker-compose.yml  fluxo-normal.txt  go.mod  go.sum  prod.sh
src/cmd/dev/: BUILD.bazel  main.go
src/cmd/examples/01_hello_world/: BUILD.bazel  main.go
src/cmd/examples/02_pointer/: BUILD.bazel  main.go
src/cmd/examples/03_album_info/: BUILD.bazel  main.go
src/cmd/examples/04_loops/: BUILD.bazel  main.go
src/cmd/examples/05_arrays/: BUILD.bazel  main.go
src/cmd/examples/06_maps/: BUILD.bazel  main.go
src/cmd/examples/07_check_even_odd/: BUILD.bazel  main.go
src/cmd/examples/08_structs/01_value/: BUILD.bazel  main.go
src/cmd/examples/08_structs/02_pointer/: BUILD.bazel  main.go
src/cmd/examples/08_structs/03_pointer_and_slice/: BUILD.bazel  main.go
src/cmd/examples/08_structs/04_json/: BUILD.bazel  main.go
src/cmd/examples/09_interfaces/01_basic/: BUILD.bazel  main.go
src/cmd/examples/09_interfaces/02_polymorphism/: BUILD.bazel  main.go
src/cmd/examples/09_interfaces/03_type_assertion/: BUILD.bazel  main.go
src/cmd/examples/09_interfaces/04_type_switch/: BUILD.bazel  main.go
src/cmd/examples/09_interfaces/05_empty/: BUILD.bazel  main.go
src/cmd/examples/10_user_welcome/: BUILD.bazel  main.go
src/cmd/examples/10_user_welcome/app/: BUILD.bazel  user.go  welcome.go
src/cmd/examples/11_auth/: BUILD.bazel  main.go
src/cmd/examples/11_auth/app/: BUILD.bazel  auth.go  session.go  user.go
src/cmd/examples/12_error/: BUILD.bazel  main.go
src/cmd/examples/13_variadic_functions/: BUILD.bazel  main.go
src/cmd/examples/14_concurrency/01_goroutines/: BUILD.bazel  main.go
src/cmd/examples/14_concurrency/02_goroutine_starvation/: BUILD.bazel  main.go
src/cmd/examples/15_channels/01_hello_channel/: BUILD.bazel  main.go
src/cmd/examples/15_channels/02_forever_block/: BUILD.bazel  main.go
src/cmd/examples/15_channels/03_select_timeout/: BUILD.bazel  main.go
src/cmd/examples/15_channels/04_infinite_queue/: BUILD.bazel  main.go
src/cmd/examples/15_channels/05_multi_worker/: BUILD.bazel  main.go
src/cmd/examples/16_generics/: BUILD.bazel  main.go
src/cmd/examples/17_context/client/: BUILD.bazel  main.go
src/cmd/examples/17_context/hotel/: BUILD.bazel  main.go
src/cmd/examples/17_context/server/: BUILD.bazel  main.go
src/cmd/examples/18_project_layout/: go.mod.example
src/cmd/examples/18_web_scraper/01_wikipedia/: BUILD.bazel
src/cmd/examples/19_tcp_port_scanner/01_sequential/: BUILD.bazel
src/cmd/examples/19_tcp_port_scanner/02_concurrent/: BUILD.bazel
src/cmd/examples/19_web_scraper/01_wikipedia/: BUILD.bazel  main.go
src/cmd/examples/20_http_checker/01_sequential/: BUILD.bazel  main.go
src/cmd/examples/20_http_checker/02_concurrent/: BUILD.bazel  main.go
src/cmd/examples/20_tcp_port_scanner/01_sequential/: BUILD.bazel  main.go
src/cmd/examples/20_tcp_port_scanner/02_concurrent/: BUILD.bazel  main.go
src/cmd/examples/21_expense_tracker/: BUILD.bazel  main.go
src/cmd/main/: BUILD.bazel  main.go
src/cmd/menu/: BUILD.bazel  examples.go  examples_registry.go  internal.go  main.go  menu.go  projects.go
src/docker/postgres/: init.sql
src/games/01_space_game/: BUILD.bazel  README.md  main.go
src/games/01_space_game/assets/: BUILD.bazel  assets.go
src/games/01_space_game/docs/guides/: BUILD_AND_DISTRIBUTION.md  OPENGL_TROUBLESHOOTING.MD
src/games/01_space_game/src/: BUILD.bazel  game.go  laser.go  meteor.go  player.go  star.go  timer.go  utils.go
src/games/02_number_guessing_game/: BUILD.bazel  README.md  main.go
src/internal/control/: BUILD.bazel  control.go
src/internal/functions/: BUILD.bazel  functions.go
src/internal/slices/: BUILD.bazel  slices.go
src/internal/structs/: BUILD.bazel  model.go  structs.go
src/internal/types/: BUILD.bazel  types.go
src/projects/01_products_api/: BUILD.bazel  Dockerfile  README.md  main.go
src/projects/01_products_api/cmd/: BUILD.bazel  main.go  server.go
src/projects/01_products_api/cmd/hash_password/: BUILD.bazel  main.go
src/projects/01_products_api/controller/: BUILD.bazel  product_controller.go
src/projects/01_products_api/db/: BUILD.bazel  conn.go
src/projects/01_products_api/db/migrations/: 000_create_products_schema.up.sql  001_create_app_user_table.up.sql  002_create_product_table.up.sql
src/projects/01_products_api/internal/controller/: BUILD.bazel  auth_controller.go  product_controller.go
src/projects/01_products_api/internal/db/: BUILD.bazel  conn.go  migrate.go
src/projects/01_products_api/internal/middleware/: BUILD.bazel  jwt_middleware.go
src/projects/01_products_api/internal/model/: BUILD.bazel  auth_dto.go  product.go  user.go
src/projects/01_products_api/internal/repository/: BUILD.bazel  auth_repository.go  product_repository.go
src/projects/01_products_api/internal/usecase/: BUILD.bazel  auth_usecase.go  product_usecase.go
src/projects/01_products_api/model/: BUILD.bazel  product_dto.go
src/projects/01_products_api/repository/: BUILD.bazel  product_repository.go
src/projects/01_products_api/usecase/: BUILD.bazel  product_usecase.go
src/projects/02_tasks_api/: BUILD.bazel  Dockerfile  main.go
src/projects/02_tasks_api/cmd/: BUILD.bazel  main.go  server.go
src/projects/02_tasks_api/db/migrations/: 000_create_tasks_schema.up.sql  001_create_todo_table.up.sql
src/projects/02_tasks_api/internal/configs/: BUILD.bazel  config.go
src/projects/02_tasks_api/internal/db/: BUILD.bazel  connection.go  migrate.go
src/services/01_ping_api/: BUILD.bazel  Dockerfile.alpine
src/services/api/01_ping/: BUILD.bazel  Dockerfile  main.go
src/services/bubble_tea/01_health_checker/: README.md
src/services/ping-api/: BUILD.bazel  main.go
src/services/ping-api/handlers/: BUILD.bazel  user.go
src/services/ping-api/routes/: BUILD.bazel  routes.go
src/services/tview/01_hello_world/: BUILD.bazel
src/services/tview/02_inventory/: BUILD.bazel  README.md  inventory.json  main.go
(+51 files in other folders)
