module(
    name = "go_workspace",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_golang_jwt_jwt_v5",
    "com_github_joho_godotenv",
    "com_github_lib_pq",
    "com_github_spf13_viper",
    "org_golang_x_crypto",
    "org_golang_x_exp",
)
