load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "02_tasks_api_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/projects/02_tasks_api",
    visibility = ["//visibility:private"],
    deps = ["//projects/02_tasks_api/cmd"],
)

go_binary(
    name = "02_tasks_api",
    embed = [":02_tasks_api_lib"],
    visibility = ["//visibility:public"],
)
