load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "01_ping_api_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/services/01_ping_api",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "01_ping_api",
    embed = [":01_ping_api_lib"],
    visibility = ["//visibility:public"],
)
