load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":01_hello_world_lib"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/01_hello_world",
    visibility = ["//visibility:public"],
)

go_library(
    name = "01_hello_world_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/01_hello_world",
    visibility = ["//visibility:private"],
)
