load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":03_album_info_lib"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/03_album_info",
    visibility = ["//visibility:public"],
)

go_library(
    name = "03_album_info_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/03_album_info",
    visibility = ["//visibility:private"],
)
