load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":05_arrays_lib"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/05_arrays",
    visibility = ["//visibility:public"],
)

go_library(
    name = "05_arrays_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/05_arrays",
    visibility = ["//visibility:private"],
)
