load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":06_maps_lib"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/06_maps",
    visibility = ["//visibility:public"],
)

go_library(
    name = "06_maps_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/06_maps",
    visibility = ["//visibility:private"],
)
