load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":07_check_even_odd_lib"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/07_check_even_odd",
    visibility = ["//visibility:public"],
)

go_library(
    name = "07_check_even_odd_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/07_check_even_odd",
    visibility = ["//visibility:private"],
)
