load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":10_user_welcome_lib"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/10_user_welcome",
    visibility = ["//visibility:public"],
)

go_library(
    name = "10_user_welcome_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/10_user_welcome",
    visibility = ["//visibility:private"],
    deps = ["//cmd/examples/10_user_welcome/app"],
)
