load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "main",
    embed = [":11_auth_lib"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/11_auth",
    visibility = ["//visibility:public"],
)

go_library(
    name = "11_auth_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/11_auth",
    visibility = ["//visibility:private"],
    deps = ["//cmd/examples/11_auth/app"],
)
