load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "12_error_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/12_error",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "12_error",
    embed = [":12_error_lib"],
    visibility = ["//visibility:public"],
)
