load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "13_variadic_functions_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/13_variadic_functions",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "13_variadic_functions",
    embed = [":13_variadic_functions_lib"],
    visibility = ["//visibility:public"],
)
