load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "16_generics_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/16_generics",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_exp//constraints"],
)

go_binary(
    name = "16_generics",
    embed = [":16_generics_lib"],
    visibility = ["//visibility:public"],
)
