load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "21_expense_tracker_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/cmd/examples/21_expense_tracker",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "21_expense_tracker",
    embed = [":21_expense_tracker_lib"],
    visibility = ["//visibility:public"],
)
