load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "assets",
    srcs = ["assets.go"],
    embedsrcs = [
        "assets.go",
        "font.ttf",
        "fontui.ttf",
        "go_player.png",
        "laser.png",
        "meteors/meteorBrown_big1.png",
        "meteors/meteorBrown_big2.png",
        "meteors/meteorBrown_big3.png",
        "meteors/meteorBrown_big4.png",
        "meteors/meteorBrown_med1.png",
        "meteors/meteorBrown_med3.png",
        "meteors/meteorBrown_small1.png",
        "meteors/meteorBrown_small2.png",
        "meteors/meteorBrown_tiny1.png",
        "meteors/meteorBrown_tiny2.png",
        "meteors/meteorGrey_big1.png",
        "meteors/meteorGrey_big2.png",
        "meteors/meteorGrey_big3.png",
        "meteors/meteorGrey_big4.png",
        "meteors/meteorGrey_med1.png",
        "meteors/meteorGrey_med2.png",
        "meteors/meteorGrey_small1.png",
        "meteors/meteorGrey_small2.png",
        "planets/planet00.png",
        "planets/planet01.png",
        "planets/planet02.png",
        "planets/planet04.png",
        "planets/planet07.png",
        "player.png",
        "stars/star_10.png",
        "stars/star_15.png",
        "BUILD.bazel",
    ],
    importpath = "github.com/0nF1REy/go-workspace/games/01_space_game/assets",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hajimehoshi_ebiten_v2//:ebiten",
        "@com_github_hajimehoshi_ebiten_v2//text/v2:text",
        "@org_golang_x_image//font",
        "@org_golang_x_image//font/opentype",
    ],
)
