load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = ["product_controller.go"],
    importpath = "github.com/0nF1REy/go-workspace/projects/01_products_api/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/01_products_api/usecase",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
