load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["product_repository.go"],
    importpath = "github.com/0nF1REy/go-workspace/projects/01_products_api/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/01_products_api/model",
    ],
)
