load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/0nF1REy/go-workspace/projects/02_tasks_api/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/02_tasks_api/internal/configs",
        "//projects/02_tasks_api/internal/db",
        "//projects/02_tasks_api/internal/handlers",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_joho_godotenv//:godotenv",
    ],
)
