load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "02_inventory_lib",
    srcs = ["main.go"],
    importpath = "github.com/0nF1REy/go-workspace/services/tview/02_inventory",
    visibility = ["//visibility:private"],
    deps = ["@com_github_rivo_tview//:tview"],
)

go_binary(
    name = "02_inventory",
    embed = [":02_inventory_lib"],
    visibility = ["//visibility:public"],
)
